hello-toolchain/deploy/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-backend
  labels:
    app: hello-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-backend
  template:
    metadata:
      labels:
        app: hello-backend
    spec:
      containers:
        - name: hello-backend
          image: hellotoolchainregistrybda91d3d.azurecr.io/hello-backend:latest # kpt-set: ${registry}/${backend-image}:${tag}
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
