hello-toolchain/deploy/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-backend
spec:
  selector:
    app: hello-backend
  ports:
    - port: 8080
      targetPort: 8080
