hello-toolchain/deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-frontend
spec:
  selector:
    app: hello-frontend
  ports:
    - port: 8080
      targetPort: 8080
