hello-toolchain/deploy/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-toolchain
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hello-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-frontend
                port:
                  number: 8080
